--- a/src/components/sign-in-and-signup/sign-in-and-signup.styles.scss
+++ b/src/components/sign-in-and-signup/sign-in-and-signup.styles.scss
@@ -1,3 +1,8 @@
 .sign-in-and-sign-up{
     margin-left: 70px;
+    width: 850px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 30px auto;
 }
