--- a/src/components/sign-up/sign-up.styles.scss
+++ b/src/components/sign-up/sign-up.styles.scss
@@ -1,7 +1,7 @@
-.sign-in{
-    width: 30%;
+.sign-up{
     display: flex;
     flex-direction: column;
+    width: 380px;
 
     .title{
         margin: 10px 0;
@@ -23,5 +23,5 @@
         cursor: pointer;
         transition: 0.3s;
       }
-  
+
 }
